--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1 class="hello">Welcome to connect four</h1>
     <h3 class="intro">connect four of your chips in a row or column or diagonally</h2>
-  
+    <h3 class="intro">click on the circle to insert your chip</h2>
     <h3 class="disp"></h2>
 
       <table class='board'>
@@ -64,7 +64,7 @@
 
       </table>
     </div>
-
+    <p align="center"> <a href="#">All rights reserved © foadtechnologies.com</a></p>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="index.js" type="text/javascript"></script>
