--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           <td><button type="button"></button></td>
           <td><button type="button"></button></td>
         </tr>
-
+        <p align = "center"><a href="https://foadhussain.github.io/foadtechnologies/">All rights reserved © foadtechnologies.com</a></p>
       </table>
     </div>
-    <p align="center"> <a href="#">All rights reserved © foadtechnologies.com</a></p>
+    
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="index.js" type="text/javascript"></script>
